fixed slider js, updated listings.html and styles.css, slides.js

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -282,14 +282,12 @@ color: #f708ad;
 	margin-right: 15px;
 }
 
-#map-arrow{
-}
-.arr-left {
+.goleft {
 	text-decoration: none;
 	opacity: 0;
 }
 
-.arr-right {
+.goright {
 	text-decoration: none;
 	opacity: 0;
 }
