--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -19,9 +19,9 @@
     </div>
       <div class="options">
         <div class="optionhead">
-          <div id="option-arrow" class="arrow-left">
-            <a href="#" class="arr-left" onclick="slidePaneloption('open')"><</a>
-            <a href="#" class="arr-right" onclick="slidePaneloption('close')">></a></div></div>
+             <div id="option-arrow" class="arrow-left">
+            <a href="#" id="optarr" class="goleft" onclick="slidePaneloption('close')"><img src='/assets/arrowoverlay.png' /></a>
+          </div></div>
           <div class="optionbody">
             <table>
               <tr>
@@ -99,8 +99,9 @@
       <div class='list-map'>
           <div class="maphead">
             <div id="map-arrow" class="arrow-left">
-              <a href="#" class="mapleft" onclick="slidePanel('open')"><</a>
-              <a href="#" class="mapright" onclick="slidePanel('close')">></a>
+              <a href="#" id="maparr" class="goleft" onclick="slidePanel('close')">
+                <img src='/assets/arrowoverlay.png' />
+              </a>
             </div>
           </div>
           <div class='map'>   
