--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
 	  	<div class="navbar">
 	      <ul>
 		      <li><%= link_to "Listings", listings_url %></li>
-		      <li><a href="#">My Favorites</a></li>
-		      <li><a href="#">List Apartment</a></li>
+		      <li><%= link_to "My Favorites", user_url(session[:user_id]) %></li>
+		      <li><%= link_to "List Apartment", new_listing_url %></li>
 	      </ul>
  		</div>
 		<div class="login">
