--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,12 @@
 <body>
 	<div class="container">
 	<header>
-	  <div class="logo">REAL <span class="logotrans">TRANSPA</span><span class="logorent">RENT</span></div>
+	  <div class="logo"><span class="logotrans">TRANSPA</span><span class="logorent">RENT</span></div>
 	  <nav>
 	  	<div class="navbar">
 	      <ul>
 		      <li><%= link_to "Listings", listings_url %></li>
-		      <li><a href="#">My Favorites</a></li>
+		      <li><a href="#">Saved Searches</a></li>
 		      <li><a href="#">List Apartment</a></li>
 	      </ul>
  		</div>
