--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -84,7 +84,7 @@
                       <%= form_for @wishlist, :remote => :true do |f| %>
                       <%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
                       <%= f.hidden_field :listing_id, value: "#{listing.id}" %>
-                      <%= f.submit 'Add to wish list', :class=> 'btn-wish', :id => "#{dom_id(listing)}" %>
+                      <%= f.submit 'W', :class=> 'btn-wish', :id => "#{dom_id(listing)}" %>
                       <% end %>
                     <% end %>
                       <strong>$<%= listing.price %></strong><br>
