--- a/app/views/landings/home.html.erb
+++ b/app/views/landings/home.html.erb
@@ -4,27 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>TranspaRent Home</title>
+    <title>TanspaRent Home</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/assets/public-style.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/public-colorbox.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/flexslider.css" type="text/css" media="all">
     <link rel="stylesheet" href="/assets/theme.css" type="text/css" media="all">
-    
-    <script src="/assets/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="/assets/modernizr.js" type="text/javascript"></script>
-    <script src="/assets/jquery.colorbox-min.js" type="text/javascript"></script>
-    <script src="/assets/jquery.flexslider.min.js" type="text/javascript"></script>
-    <script src="/assets/jquery.easing.1.3.js" type="text/javascript"></script>
     <script src="/assets/theme.js" type="text/javascript"></script>
-    <script src="/assets/jquery.func.js" type="text/javascript"></script>
-    <script src="/assets/public.js" type="text/javascript"></script>
-<script type="text/javascript" async="" src="/assets/in.php"></script><script type="text/javascript" async="" src="/assets/in(1).php"></script><script type="text/javascript" async="" src="/assets/in(2).php"></script><script type="text/javascript" async="" src="/assets/in(3).php"></script>
-  <script type="text/javascript" src="scripts/jquery_1_8_3.js"></script>
-  <script type="text/javascript" src="scripts/jquery_1_9_1.js"></script>
-  <script type="text/javascript" src="scripts/slide.js"></script>
-  <link rel="stylesheet" href="/assets/screen.css" />
-  <%= javascript_include_tag "application" %>
+    <script type="text/javascript" src="scripts/jquery_1_8_3.js"></script>
+    <script type="text/javascript" src="scripts/jquery_1_9_1.js"></script>
+    <script type="text/javascript" src="scripts/slide.js"></script>
+    <%= javascript_include_tag "application" %>
 </head>
 <body class="home" id="home"><section id="wrap">
   <header class="light">
@@ -49,7 +37,7 @@
                                 <div class="ch-info-front ch-img-1"></div>
                                 <div class="ch-info-back">
                                     <h3>How Many Bedrooms?</h3>
-                                    <p><input type="text" class="bedbathbar" placeholder="Baths"></p>
+                                    <p><input type="text" class="bedbathbar" placeholder="How Many Beds?"></p>
                                 </div>  
                             </div>
                         </div>
@@ -60,7 +48,7 @@
                                 <div class="ch-info-front ch-img-2"></div>
                                 <div class="ch-info-back">
                                     <h3>How Many Bathrooms?</h3>
-                                    <p><input type="text" class="bedbathbar" placeholder="Baths"></p>
+                                    <p><input type="text" class="bedbathbar" placeholder="How many Baths?"></p>
                                 </div>
                             </div>
                         </div>
@@ -70,69 +58,32 @@
                             <div class="ch-info">
                                 <div class="ch-info-front ch-img-3"></div>
                                 <div class="ch-info-back">
-                                    <h3>Max Rent?</h3>
-                                    <p><input type="text" class="bedbathbar" placeholder="Rent"></a></p>
+                                    <h3>Rent Range?</h3>
+                                    <p><input type="text" class="bedbathbar" placeholder="Min Rent"></a></p>
+                                    <p><input type="text" class="bedbathbar" placeholder="Max Rent"></a></p>
                                 </div>
                             </div>
                         </div>
                     </li>
                 </ul><br><br>
-  <a href="#" class="theme-big-blue-button theme-apex"><span class="theme-arrow-down">Find Apartment</span></a>
+  <a href="#" class="btn-search'">Find Apartment</a>
   <br><br><br><br><br>
-
   <p class="theme-apexb t-yellow"><br> What makes TranspaRent<br>Unique?</p>
 </section>  </section>
-  
   <section id="tour" class="fake-page">
         <span class="top"></span>
 <section class="content">
   <section class="shell">
-    
     <h2 class="theme-apex">Feature Tour Goes Here</h2>
-
-<!--     <div class="macbook-air">
-        <span class="shadow"></span>
-        <div class="slider-container" style="overflow: hidden;">
-            <ul class="slides" style="-webkit-transition: 0s; width: 1800%; -webkit-transform: translate3d(-3360px, 0, 0);"><li class="clone" style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide7.jpg" alt="Invoices &amp; Estimates"> <span class="notext">Value Message 1</span> <h3 class="blue-bar theme-noteworthy"></h3></li>
-                <li style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide1.jpg" alt="The Ledger"> <span class="notext"></span></li>
-                <li style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide2.jpg" alt="A monkey could do it."> <span class="notext"></span></li>
-                <li style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide3.jpg" alt="Go Paperless"> <span class="notext"></span></li>
-                <li style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide4.jpg" alt="Real Time Dashboard"> <span class="notext"></span></li>
-                <li style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide5.jpg" alt="Custom Reports"> <span class="notext"></span></li>
-                <li style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide6.jpg" alt="Contact Management"> <span class="notext"></span></li>
-                <li style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide7.jpg" alt="Invoices &amp; Estimates"> <span class="notext"></span> <h3 class="blue-bar theme-noteworthy">Coming soon!</h3></li>
-            <li class="clone" style="width: 560px; float: left; display: block;"><img src="./skyclker_files/home-slide1.jpg" alt="The Ledger"> <span class="notext"></span></li></ul>
-        <ul class="flex-direction-nav"><li></li><li></li></ul></div></div>
-    <div class="slide-info" style="display: block;">
-        <h3 class="theme-apex"></h3>
-        <p class="theme-apexb"></p>
-    </div> -->
   </section>
 </section>  </section>
-
   <section id="plans" class="fake-page">
         <section class="shell">
-  
 </section>  </section>
-
   <section id="more" class="fake-page">
         <section class="shell">
 </section></section>
-
     <footer class="dark">
-</footer></section><script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-11666228-11']);
-  _gaq.push(['_setDomainName', 'skyclerk.com']);
-  _gaq.push(['_trackPageview']);
+</footer></section>
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-<script src="./skyclker_files/js" type="text/javascript"></script>
-<script type="text/javascript">try{ clicky.init(66385279); }catch(err){}</script>
-
-<div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" style="display: none; padding-bottom: 16px; padding-right: 16px;"><div id="cboxWrapper"><div><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxLoadedContent" style="width: 0px; height: 0px; overflow: hidden; float: left;"></div><div id="cboxLoadingOverlay" style="float: left;"></div><div id="cboxLoadingGraphic" style="float: left;"></div><div id="cboxTitle" style="float: left;"></div><div id="cboxCurrent" style="float: left;"></div><div id="cboxNext" style="float: left;"></div><div id="cboxPrevious" style="float: left;"></div><div id="cboxSlideshow" style="float: left;"></div><div id="cboxClose" style="float: left;"></div></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none;"></div></div><div id="sky-tooltip"><span class="arrow"></span> <div class="entry"></div></div></body></html>
+</body></html>
