--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -185,7 +185,7 @@ header {
     width: auto;
     overflow-x: hidden !important;
     padding:0; 
-    margin:0;
+    margin-top: 100px;
 	@include span-columns(12,12);
 }
 
@@ -409,109 +409,109 @@ footer {
   	opacity: .0;
   }
 
-nav {
-	@include span-columns(10,12);
-	float: right;
-	margin-top: 0px;
-	padding: 6px;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	border-radius: 6px;
-	overflow: hidden;
-	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.75), 
-					 inset -1px -1px 0 #444;
-	-webkit-box-shadow: inset 1px 1px 2px #000, 
-						inset -1px -1px 0 #444;
-	box-shadow: inset 0 1px 2px rgba(0,0,0,0.75), 
-				inset 0 -1px 0 rgba(255,255,255,0.15);
-}
+// nav {
+// 	@include span-columns(10,12);
+// 	float: right;
+// 	margin-top: 0px;
+// 	padding: 6px;
+// 	-moz-border-radius: 6px;
+// 	-webkit-border-radius: 6px;
+// 	border-radius: 6px;
+// 	overflow: hidden;
+// 	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.75), 
+// 					 inset -1px -1px 0 #444;
+// 	-webkit-box-shadow: inset 1px 1px 2px #000, 
+// 						inset -1px -1px 0 #444;
+// 	box-shadow: inset 0 1px 2px rgba(0,0,0,0.75), 
+// 				inset 0 -1px 0 rgba(255,255,255,0.15);
+// }
 
-.navbar {
-	@include span-columns(7,10);
-	margin-left: 0;
-}
+// .navbar {
+// 	@include span-columns(7,10);
+// 	margin-left: 0;
+// }
 
-.navbar li { display: inline;}
+// .navbar li { display: inline;}
 
-.navbar li a {
-	@include rounded-corners(7px);
-	color: lighten(#f708ad, 1%);
-	font-weight: lighter;
-	float: left;
-	height: 40px;
-	line-height: 40px;
-	margin-right: 5px;
-	text-align: center;
-	padding: 0 15px;
-	font-size: 12px;
-	text-shadow: -1px -1px #000;
-	text-transform: uppercase;
-	background-image:	-moz-linear-gradient(top, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0) 100%),
-						url("/assets/nav-item-pattern.png");
-	background-image:	-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.1)), color-stop(100%,rgba(255,255,255,0))),
-						url("/assets/nav-item-pattern.png");
-	background-image:	-webkit-linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
-						url("/assets/nav-item-pattern.png");
-	background-image:	-o-linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
-						url("/assets/nav-item-pattern.png");
-	background-image:	-ms-linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
-						url("/assets/nav-item-pattern.png");
-	background-image:	linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
-						url("/assets/nav-item-pattern.png");
-	background-color: #343434;
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.6), 
-					 inset 0 1px 0 rgba(255,255,255,0.15);
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.6), 
-						inset 0 1px 0 rgba(255,255,255,0.15);
-	box-shadow: 0 1px 1px rgba(0,0,0,0.6), 
-				inset 0 1px 0 rgba(255,255,255,0.15);
-	text-decoration: none;
-}
+// .navbar li a {
+// 	@include rounded-corners(7px);
+// 	color: lighten(#f708ad, 1%);
+// 	font-weight: lighter;
+// 	float: left;
+// 	height: 40px;
+// 	line-height: 40px;
+// 	margin-right: 5px;
+// 	text-align: center;
+// 	padding: 0 15px;
+// 	font-size: 12px;
+// 	text-shadow: -1px -1px #000;
+// 	text-transform: uppercase;
+// 	background-image:	-moz-linear-gradient(top, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0) 100%),
+// 						url("/assets/nav-item-pattern.png");
+// 	background-image:	-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.1)), color-stop(100%,rgba(255,255,255,0))),
+// 						url("/assets/nav-item-pattern.png");
+// 	background-image:	-webkit-linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
+// 						url("/assets/nav-item-pattern.png");
+// 	background-image:	-o-linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
+// 						url("/assets/nav-item-pattern.png");
+// 	background-image:	-ms-linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
+// 						url("/assets/nav-item-pattern.png");
+// 	background-image:	linear-gradient(top, rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 100%),
+// 						url("/assets/nav-item-pattern.png");
+// 	background-color: #343434;
+// 	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.6), 
+// 					 inset 0 1px 0 rgba(255,255,255,0.15);
+// 	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.6), 
+// 						inset 0 1px 0 rgba(255,255,255,0.15);
+// 	box-shadow: 0 1px 1px rgba(0,0,0,0.6), 
+// 				inset 0 1px 0 rgba(255,255,255,0.15);
+// 	text-decoration: none;
+// }
 	
-.navbar li.active a {
-	@include rounded-corners(7px);
-	background: #7f9b15 url("../images/noise.jpg") repeat 0 0;
-	background: url("/assets/noise.png") 0 0 repeat,
-				-moz-linear-gradient(top, #7c9911 0%, #829e1c 50%, #739102 51%, #7f9b15 100%);
-	background: url("/assets/noise.png") 0 0 repeat,
-				-webkit-gradient(linear, left top, left bottom, color-stop(0%,#7c9911), color-stop(50%,#829e1c), color-stop(51%,#739102), color-stop(100%,#7f9b15));
-	background: url("/assets/noise.png") 0 0 repeat,
-				-webkit-linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);
-	background: url("/assets/noise.png") 0 0 repeat,
-				-o-linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);
-	background: url("/assets/noise.png") 0 0 repeat,
-				-ms-linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);
-	background: url("/assets/noise.png") 0 0 repeat,
-				linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);	
-	color: #fff;
-	-moz-box-shadow:	inset 0 0 1px rgba(255,255,255,0.5), 
-						inset 0 1px 0 rgba(255,255,255,0.5), 
-						0 2px 4px rgba(0,0,0,0.6);
-	-webkit-box-shadow:	inset 0 0 1px rgba(255,255,255,0.5), 
-						inset 0 1px 0 rgba(255,255,255,0.5), 
-						0 2px 4px rgba(0,0,0,0.6);
-	box-shadow:	inset 0 0 1px rgba(255,255,255,0.5), 
-				inset 0 1px 0 rgba(255,255,255,0.5), 
-				0 2px 4px rgba(0,0,0,0.6);
-}
+// .navbar li.active a {
+// 	@include rounded-corners(7px);
+// 	background: #7f9b15 url("../images/noise.jpg") repeat 0 0;
+// 	background: url("/assets/noise.png") 0 0 repeat,
+// 				-moz-linear-gradient(top, #7c9911 0%, #829e1c 50%, #739102 51%, #7f9b15 100%);
+// 	background: url("/assets/noise.png") 0 0 repeat,
+// 				-webkit-gradient(linear, left top, left bottom, color-stop(0%,#7c9911), color-stop(50%,#829e1c), color-stop(51%,#739102), color-stop(100%,#7f9b15));
+// 	background: url("/assets/noise.png") 0 0 repeat,
+// 				-webkit-linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);
+// 	background: url("/assets/noise.png") 0 0 repeat,
+// 				-o-linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);
+// 	background: url("/assets/noise.png") 0 0 repeat,
+// 				-ms-linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);
+// 	background: url("/assets/noise.png") 0 0 repeat,
+// 				linear-gradient(top, #7c9911 0%,#829e1c 50%,#739102 51%,#7f9b15 100%);	
+// 	color: #fff;
+// 	-moz-box-shadow:	inset 0 0 1px rgba(255,255,255,0.5), 
+// 						inset 0 1px 0 rgba(255,255,255,0.5), 
+// 						0 2px 4px rgba(0,0,0,0.6);
+// 	-webkit-box-shadow:	inset 0 0 1px rgba(255,255,255,0.5), 
+// 						inset 0 1px 0 rgba(255,255,255,0.5), 
+// 						0 2px 4px rgba(0,0,0,0.6);
+// 	box-shadow:	inset 0 0 1px rgba(255,255,255,0.5), 
+// 				inset 0 1px 0 rgba(255,255,255,0.5), 
+// 				0 2px 4px rgba(0,0,0,0.6);
+// }
 
-.navbar li.contact a {
-	margin-right: 0;
-	-moz-border-radius: 0 4px 4px 0;
-	-webkit-border-radius: 0 4px 4px 0;
-	border-radius: 0 4px 4px 0;
-}
+// .navbar li.contact a {
+// 	margin-right: 0;
+// 	-moz-border-radius: 0 4px 4px 0;
+// 	-webkit-border-radius: 0 4px 4px 0;
+// 	border-radius: 0 4px 4px 0;
+// }
 
-.navbar li a span {
-	background: transparent url("/assets/nav.png") 0 -23px no-repeat;
-	display: block;
-	text-indent: -9999px;
+// .navbar li a span {
+// 	background: transparent url("/assets/nav.png") 0 -23px no-repeat;
+// 	display: block;
+// 	text-indent: -9999px;
 	
-	width: 53px;
-	height: 23px;
-	margin: 8px;
-	opacity: 1;
-}
+// 	width: 53px;
+// 	height: 23px;
+// 	margin: 8px;
+// 	opacity: 1;
+// }
 
 .login {
 	@include span-columns(3,10);
