--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -7,12 +7,13 @@
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
   width: 400px;
+	height: 100%;
   margin-right: 10px
 }
 
 .gmaps4rails_map {
   width: 400px;
-  height: 500px;
+  height: 100%;
   margin-right: 10px
 }
 .bing_map {
