updated home.html in listings

--- a/app/views/listings/home.html.erb
+++ b/app/views/listings/home.html.erb
@@ -37,7 +37,7 @@
                         </div>
                     </li>
                 </ul><br><br>
-  <a href="#" class="btn-search'">Find Apartment</a>
+  <a href="#" class="btn-search'">Find Apartments</a>
   <br><br><br><br><br>
   <p class="theme-apexb t-yellow"><br> What makes TranspaRent<br>Unique?</p>
 </section>  </section>
