styled wish list page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<section id="wrapper">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -37,3 +38,4 @@
   <b>Wishlist:</b>
   <p>You haven't added any listings to your wishlist yet.</p>
   <% end %>
+</section>
