fixed home page link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
 	<header class="light">
-		<div class="logo"><a href="<% root_url %>"><span class="logotrans">TRANSPA</span><span class="logorent">RENT</span></a></div> 
+		<div class="logo"><a href="<%= root_url %>"><span class="logotrans">TRANSPA</span><span class="logorent">RENT</span></a></div>
     	<section class="shell">
         	<nav class="theme-apex left">
 			      <%= link_to "Listings", listings_url %>
