--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -73,8 +73,10 @@
                       <strong>Address:</strong> <%= listing.address %><br>
                       <strong>Beds:</strong> <%= listing.beds %> |  
                       <strong>Baths:</strong> <%= listing.bath %><br><br>
+                      <% if @user.present? && @user.admin == true  %>
                       <%= link_to 'Edit', edit_listing_path(listing) %>
                       <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %>
+                      <% end %>
                   </div>
                   </div>
                   <div class="list-rent">
