--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -162,6 +162,14 @@ header {
 	margin-left: 17%;
 }
 
+#searchhome {
+	@include rounded-corners(7px);
+	width: 490px;
+	height: 40px;
+	margin-right: 60px;
+		margin-top: 10px;
+}
+
 #bedbathbar {
 	@include rounded-corners(7px);
 	width: 40px;
@@ -183,6 +191,7 @@ header {
     border: solid 0px #0F0;
     border-style:none;
     width: auto;
+    color: #ececec;
     overflow-x: hidden !important;
     padding:0; 
     margin-top: 100px;
