--- a/app/views/listings/home.html.erb
+++ b/app/views/listings/home.html.erb
@@ -37,7 +37,21 @@
                         </div>
                     </li>
                 </ul><br><br>
-  <a href="#" class="btn-search'">Find Apartments</a>
+          <form id="searchbox" action="">
+          <%= form_tag listings_path, :method => 'get' do %>
+          <!-- search bar id is in text field tag -->
+          <%= text_field_tag :searchhome, params[:search], :placeholder => 'City, Zip, Neighborhood'%>
+          <%#= text_field_tag :bedbathbar, params[:search], :placeholder => '# of Beds'%>
+          <%#= submit_tag 'Submit', :class=> 'btn-bedbath', :name => nil%>
+          <%#= text_field_tag :bedbathbar, params[:search], :placeholder => '# of Baths'%>
+          <%#= submit_tag 'Submit', :class=> 'btn-bedbath', :name => nil %>
+           <%#= text_field_tag :rentbar, params[:search], :placeholder => 'Min Rent'%>
+          <%#= submit_tag 'Submit', :class=> 'btn-bedbath', :name => nil%>
+          <%#= text_field_tag :rentbar, params[:search], :placeholder => 'Max Rent s   '%>
+          <%#= submit_tag 'Submit', :class=> 'btn-bedbath', :name => nil %>
+          <%= submit_tag 'Find Apartments', :class=> 'btn-search', :name => nil %>
+          <% end %>        
+        </form>
   <br><br><br><br><br>
   <p class="theme-apexb t-yellow"><br> What makes TranspaRent<br>Unique?</p>
 </section>  </section>
