--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -191,10 +191,21 @@ header {
     border: solid 0px #0F0;
     border-style:none;
     width: auto;
-    color: #ececec;
     overflow-x: hidden !important;
     padding:0; 
     margin-top: 100px;
+	@include span-columns(12,12);
+}
+
+#adminwrapper {
+    border: solid 0px #0F0;
+    border-style:none;
+    width: auto;
+    color: #ececec;
+    overflow-x: hidden !important;
+    padding:0; 
+    margin-top: 125px;
+    margin-left: 50px;
 	@include span-columns(12,12);
 }
 
