--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,3 +1,4 @@
+<section id="adminwrapper">
 <p id="notice"><%= notice %></p>
 
 <div class='unitshow'
@@ -103,3 +104,4 @@
 
 <%= link_to 'Edit', edit_listing_path(@listing) %> |
 <%= link_to 'Back', listings_path %>
+</section>
