--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<section id="adminwrapper">
 <h1>Listing users</h1>
 
 <table>
@@ -22,3 +23,4 @@
 <br />
 
 <%= link_to 'New User', new_user_path %>
+</section>
