display markers in searched city

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -108,8 +108,7 @@
           </div>
           <div class='map'>  
             <%= gmaps({
-									"map_options" => @map_options
-                  })
+									"map_options" => @map_options,"markers" => { "data" => @markers}})
 
                 %>
           </div>
